[package]
name = "axum-tungstenite"
version = "0.3.0"
categories = ["asynchronous", "network-programming", "web-programming"]
description = "WebSocket connections for axum directly using tungstenite"
edition = "2021"
homepage = "https://github.com/davidpdrsn/axum-tungstenite"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-tungstenite"

[features]
deflate = ["tokio-tungstenite/deflate"]
deflate-opt = ["deflate", "tokio-tungstenite/deflate-opt"]

[dependencies]
async-trait = "0.1.59"
axum-core = "0.4.2"
base64 = "0.21.0"
bytes = "1.3.0"
futures-util = { version = "0.3.25", default-features = false, features = ["alloc"] }
http = "1.0.0"
http-body = "1.0.0"
hyper = "1.1.0"
sha-1 = "0.10.1"
tokio = { version = "1.23.0", features = ["rt"] }
tokio-tungstenite = { git = "https://github.com/nakedible-p/snapview-tokio-tungstenite", branch = "deflate-release" }
headers = { git = "https://github.com/nakedible-p/hyperium-headers", branch = "deflate-release" }
headers-ext = "0.0.4"
hyper-util = { version = "0.1.2", features = ["tokio"] }

[dev-dependencies]
axum = "0.7.3"
